...
                        DataHelper.currentStrengthExercises
                    )
                },
                enabled = currentExercisesSelected.value != ExerciseType.STRENGTH,
                modifier = Modifier
                    .weight(1f)
                    .testTag("StrengthButton"),
                colors = ButtonDefaults.buttonColors(
                    containerColor = MaterialTheme.colorScheme.outline,
                    contentColor = MaterialTheme.colorScheme.onSurfaceVariant,
                    disabledContainerColor = MaterialTheme.colorScheme.primary,
                    disabledContentColor = MaterialTheme.colorScheme.onPrimary
                ),
...
                        DataHelper.currentEnduranceExercises
                    )
                },
                modifier = Modifier
                    .weight(1f)
                    .padding(start = 4.dp)
                    .testTag("EnduranceButton"),
                enabled = currentExercisesSelected.value != ExerciseType.ENDURANCE,
                colors = ButtonDefaults.buttonColors(
                    containerColor = MaterialTheme.colorScheme.outline,
                    contentColor = MaterialTheme.colorScheme.onSurfaceVariant,
                    disabledContainerColor = MaterialTheme.colorScheme.primary,
                    disabledContentColor = MaterialTheme.colorScheme.onPrimary
...
                totalReps
            ),
            style = MaterialTheme.typography.headlineMedium,
            color = MaterialTheme.colorScheme.onTertiaryContainer,
            modifier = Modifier
                .padding(start = 10.dp, top = 8.dp)
                .testTag("total_number_of_exercises_and_sets")
        )
        Text(
            text = stringResource(id = R.string.complete_exercises, finishedExercises),
            style = MaterialTheme.typography.bodyMedium,
            color = MaterialTheme.colorScheme.onTertiaryContainer,
            modifier = Modifier
                .padding(start = 10.dp, top = 6.dp)
                .testTag("number_of_completed_exercises")
        )
        Text(
            text = stringResource(id = R.string.complete_sets, finishedReps),
            style = MaterialTheme.typography.bodyMedium,
            color = MaterialTheme.colorScheme.onTertiaryContainer,
            modifier = Modifier
                .padding(start = 10.dp, top = 4.dp, bottom = 8.dp)
                .testTag("number_of_completed_sets_for_all_exercises")
        )


        LazyColumn(
            modifier = Modifier.testTag("ExercisesLazyColumn")
        ) {
            itemsIndexed(exercises.value) { exerciseIndex, exercise ->
                Card(
                    modifier = Modifier
                        .fillMaxSize()
                        .padding(2.dp)
...
